# Health-Wallet-AI-querying

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  polygon-map-test.ppk  pyproject.toml
.github/workflows/: ai-server-deploy.yml
src/api/: app.py  dependencies.py
src/api/routes/: benchmark.py  health.py  query.py
src/benchmark/: excel_writer.py  runner.py
src/config/: logging.py  settings.py
src/core/: __init__.py  base_strategy.py  models.py  strategy_registry.py
src/db/: queries.py  session.py
src/llm/: base_client.py  client_factory.py  provider.py
src/llm/providers/: gemini.py
tests/: conftest.py
tests/integration/: test_api_agentic.py  test_api_benchmark.py  test_api_health.py  test_api_langgraph.py  test_api_query.py  test_queries.py
tests/mocks/: __init__.py  mock_gemini_for_agentic.py  mock_langchain_llm.py  mock_llm_client.py
tests/unit/: test_agentic_strategy.py  test_client_factory.py  test_fhir_repository.py  test_langgraph_strategy.py  test_mock_client.py  test_naive_dump_strategy.py  test_query_context.py  test_query_result.py  test_retry.py  test_sql_guard.py  test_strategy_registry.py  test_tool_executor.py
ts-version/: .env  .env.example  .env.ts  .gitignore  README.md  debug-bindtools.ts  package.json  polygon-map-prod.ppk  test-bindtools.ts  test-gemini-methods.ts  test-strategy-resolution.ts  ts-version-setup v1.md  ts-version-setup.md  tsconfig.json
ts-version/src/: index.ts
ts-version/src/api/: app.ts  dependencies.ts
ts-version/src/config/: logging.ts  settings.ts
(+54 files in other folders)
