[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polygon-health-ai-query-engine"
version = "0.1.0"
description = "Polygon Health AI Query Engine"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy[asyncio]",
  "asyncpg",
  "pydantic>=2",
  "pydantic-settings",
  "google-genai",
  "openpyxl",
  "httpx",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "ruff",
  "mypy",
  "testcontainers[postgres]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

